# farm

./: .gitignore  CLAUDE.md  LICENSE  pyproject.toml
agriwebb/: .env.example  .gitignore  pyproject.toml
agriwebb/docs/: lambing-analysis.md  pasture-biomass.md
agriwebb/scripts/: create_summary_chart.py  explore_fields.py  fetch_lactation_data.py  weather_carbon_update.py
agriwebb/src/agriwebb/: __init__.py  client.py  config.py  mcp_server.py  weather.py
agriwebb/src/agriwebb/analysis/: __init__.py  analyze_carbon.py  analyze_field.py  carbon.py
agriwebb/src/agriwebb/cli/: __init__.py  backfill_growth.py  introspect_api.py  setup.py
agriwebb/src/agriwebb/core/: __init__.py  cache.py  client.py  config.py  timestamps.py  units.py
agriwebb/src/agriwebb/data/: __init__.py  fields.py  grazing.py  historical.py  livestock.py  soils.py
agriwebb/src/agriwebb/pasture/: __init__.py  api.py  backtest.py  biomass.py  cli.py  growth.py  validate.py
agriwebb/src/agriwebb/portal/: __init__.py  client.py  sync.py
agriwebb/src/agriwebb/satellite/: __init__.py  gee.py  moss.py  ndvi.py  ndvi_historical.py
agriwebb/tests/: conftest.py  test_backtest.py  test_biomass.py  test_client.py  test_config.py  test_dead_code.py  test_fetching.py  test_graphql_error.py  test_graphql_queries.py  test_grazing.py  test_historical.py  test_lambing_loader.py  test_lambing_reports.py  test_livestock.py  test_mcp_server.py  test_openmeteo.py  test_paddock_weather.py  test_pasture_growth.py  test_portal_client.py  test_setup.py  test_shared_utilities.py  test_units.py  test_validate.py  test_weather.py
(+20 files in other folders)
