[project]
name = "farm"
version = "0.1.0"
description = "Farm management tools and scripts"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = ["agriwebb"]

[tool.uv.sources]
agriwebb = { workspace = true }

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "TCH"]
