[project]
name = "agriwebb"
version = "0.1.0"
description = "AgriWebb integration tools"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "earthengine-api>=1.4.0",
    "geojson>=3.1.0",
    "matplotlib>=3.10.8",
    "plotly>=6.5.2",
    "kaleido>=1.2.0",
    "tenacity>=9.0.0",
]

[project.scripts]
agriwebb-weather = "agriwebb.weather.cli:cli"
agriwebb-setup = "agriwebb.cli.setup:cli"
agriwebb-livestock = "agriwebb.data.livestock:cli"
agriwebb-pasture = "agriwebb.pasture.cli:cli"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "pytest-cov>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
source = ["agriwebb"]
omit = ["*/__init__.py"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["SIM108"]  # Allow if/else blocks instead of ternary operators
